# ormx

./: .gitignore  Cargo.toml  README.md  test.sqlite-shm  test.sqlite-wal
example/: Cargo.toml  blah.rs
example/src/: main.rs
macros/: Cargo.toml
macros/src/: attrs.rs  delete.rs  entity.rs  get.rs  insert.rs  lib.rs  parse.rs  patch.rs  set.rs  update.rs
ormx/: Cargo.toml
ormx/src/: lib.rs
