[package]
name = "example"
version = "0.1.0"
authors = ["Moritz Bischof <moritz.bischof@aleph-alpha.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ormx = { path = "../ormx" }
tokio = { version = "0.2" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
env_logger = "0.7"
serde_json = "1.0.56"
serde_repr = "0.1"
chrono = { version = "0.4.12", features = ["serde"] }
bigdecimal = { version = "0.1.2", features = [ "serde" ] }

[dependencies.sqlx]
git = "https://github.com/launchbadge/sqlx.git"
default-features = false
features = ["runtime-tokio", "macros", "json", "postgres", "time", "chrono", "bigdecimal", "tls"]
