[package]
name = "macros"
version = "0.1.0"
authors = ["Moritz Bischof <moritz.bischof@aleph-alpha.de>"]
edition = "2018"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.58", features = ["full"] }
quote = "1.0.8"
proc-macro2 = "1.0.24"
itertools = "0.10.0"
