[package]
name = "ormx"
version = "0.1.0"
authors = ["Moritz Bischof <moritz.bischof@aleph-alpha.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sqlx]
version = "0.4.0-beta.1"
default-features = false
features = ["macros", "sqlite"]

[dependencies.macros]
path = "../macros"

[dependencies.futures]
version = "0.3"

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[features]
default = ["runtime-async-std"]
sqlite = ["macros/sqlite", "sqlx/sqlite"]
mysql = ["macros/mysql", "sqlx/mysql"]
postgres = ["macros/postgres", "sqlx/postgres"]
runtime-tokio = ["sqlx/runtime-tokio"]
runtime-async-std = ["sqlx/runtime-async-std"]
serde-support = ["serde", "macros/serde-support"]


[dev-dependencies]
async-std = { version = "1.6", features = ["attributes"] }