[package]
name = "ormx"
version = "0.1.0"
authors = ["Moritz Bischof <moritz.bischof@aleph-alpha.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.macros]
path = "../macros"

[dependencies.futures]
version = "0.3"

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[features]
sqlite = ["macros/sqlite"]
mysql = ["macros/mysql"]
postgres = ["macros/postgres"]
serde-support = ["serde", "macros/serde-support"]

[dev-dependencies]
async-std = { version = "1.6", features = ["attributes"] }